# lazylab

./: .gitignore  .golangci.yml  .goreleaser.yml  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml  tasks.md
.github/workflows/: ci.yml  release.yml
cmd/lazylab/: main.go
docs/: 004-pipeline-tab-design.md  005-mr-actions-design.md  006-caching-design.md
docs/adr/: 001-api-client-choice.md  002-textual-message-bubbling.md  003-diff-rendering-approach.md  007-go-config-path-resolution.md  008-go-gitlab-client-choice.md  009-go-cache-port.md  010-go-tui-layout.md  011-go-repos-view.md  012-go-mrs-view.md  013-go-diff-tab.md  014-go-pipeline-tab.md  015-go-theme-palette.md  016-go-list-design-parity.md  017-go-pipeline-design-parity.md  018-clipboard-browser-deps.md  019-go-conversation-tab.md  020-go-mr-actions.md  021-cache-refresh-ui-fanout.md
docs/migration/: 000-overview.md  001-stack-rationale.md  002-module-mapping.md  003-phases.md
internal/appcontext/: appcontext.go  appcontext_test.go
internal/cache/: cache.go  cache_test.go  disk.go  disk_test.go  do.go  entry.go  key.go  key_test.go  refresh.go  refresh_event_test.go
internal/cli/: helpers_test.go  run.go  run_test.go  version.go  version_test.go
internal/config/: config.go  config_test.go  defaults.go  loader.go  paths.go  save.go
internal/gitlab/: client.go  client_test.go  discussions.go  discussions_test.go  merge_requests.go  merge_requests_test.go  mr_actions.go  mr_actions_test.go  pipelines.go  pipelines_test.go  projects.go  (+2 more)
lazylab/: __main__.py  cli.py
tests/: conftest.py
(+117 files in other folders)
